2004-09-13 Paul Jakma <paul@dishone.st>

	* Makefile.am: extract.pl isnt in srcdir, it's always in the builddir.
	  remove zebra/irdp.c from list - dead.
	* extract.pl.in: match on end of filenames, filename could contain
          various preamble due to out of tree builds. Substitute in the
	  autoconf srcdir/builddir paths for includes to cpp.

2004-08-28 Hasso Tepper <hasso at quagga.net>

	* vtysh_main.c: Rename signal handling functions not to conflict
	  with functions from lib/sigevent.c.

2004-08-27 Hasso Tepper <hasso at quagga.net>

	* vtysh.c: Make "terminal length <0-512>" command work in vtysh.

2004-08-27 Hasso Tepper <hasso at quagga.net>

	* vtysh.c: Enable using ssh from ENABLE_NODE.
	* vtysh_config.c: Make enable password uniq lines appear only once in
	  configuration.
	* vtysh_main.c, vtysh_config.c, vtysh.h: Remove useless code which
	  searched configuration files from current directory. Add -f to
	  specify conf from command line.

2004-08-26 Hasso Tepper <hasso at quagga.net>

	* *.c: Cosmetical changes - strip long lines, fix multiline comments
	  style, indentation fixes, remove useless comments.
	* vtysh.h: define VTYSH_INTERFACE.
	* vtysh.c: Use VTYSH_INTERFACE where possible. Added some related TODO
	  items.
	* vtysh.c: Move things around a little to reduce spaghetti mess.
	* Makefile.am: Parse only needed files from zebra daemon while
	  building vtysh_cmd.c file to supress warnings.

2004-06-30  Greg Troxel  <gdt@poblano.ir.bbn.com>

	* extract.pl.in: Rename from extract.pl, with @PERL@.

	* Makefile.am: Add vtysh_cmds.c to CLEANFILES.

2004-06-20 Hasso Tepper <hasso@estpak.ee>

	* extract.pl: Zebra daemon has access lists as well.

2004-05-10 Hasso Tepper <hasso@estpak.ee>

	* vtysh.c: Workaround for most hated vtysh bug - Bugzilla #58.

2004-04-06 Hasso Tepper <hasso@estpak.ee>

	* vtysh_main.c: Don't save command to history if last command already
	  there is same.
	* vtysh_main.c: Replace -e with -c.
	* vtysh_main.c: Fix help.
